# Hoego

./: .eslintignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Claude.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  NEXT_SESSION.md  README.md  REFACTORING.md  REFACTORING_PHASE4.md  eslint.config.js  hoego  index.html  install.sh  package-lock.json  package.json  tailwind.config.ts  test-hoego-cli.sh  test-markdown.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.storybook/: main.ts  preview.tsx  storybook.css
docs/: README.md  analysis_report.md  architecture.md  checkbox-implementation-notes.md  component-extraction-guide.md  hoego-cli-plan.md  hoego-cli-tasks.md  markdown-viewer-improvements.md  markdown-viewer.md  phase0_validation_report.md  project-analysis.md  refactoring-plan.md  refactoring-progress.md  sample_dump.md  streaming-plan.md  test-checkbox-example.md
docs/architecture/: index.md  ipc-통신-패턴.md  path-alias.md  개요.md  날짜시간-처리.md  마이그레이션-가이드.md  명명-규칙-naming-conventions.md  아키텍처-결정-요약.md  (+7 more)
sample-dumps/: README.md  day1-monday.md  day2-tuesday.md  day3-wednesday.md  day4-thursday.md  day5-friday.md  day6-saturday.md  day7-sunday.md
scripts/: build.mjs  setup-updater-keys.sh  test_tagging.py  test_tagging.sh
src/: App.tsx  entry.ts  history.ts  index.css  index.html  settings.html  settings.tsx
src-tauri/: .taurignore  20251121  20251122  Cargo.toml  build.rs  tauri.conf.json
src-tauri/examples/: llm_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ai_summary.rs  app_settings.rs  history.rs  lib.rs  main.rs  model_selection.rs  pii_masker.rs  shortcuts.rs  tray.rs  utils.rs  weekly_data.rs  window_manager.rs
src-tauri/src/cli/: daily_log.rs  mod.rs  tui.rs
src-tauri/src/commands/: ai.rs  dump.rs  feedback.rs  history.rs  llm.rs  mod.rs  retrospect.rs  settings.rs  window.rs
src-tauri/src/llm/: commands.rs  download.rs  engine.rs  mod.rs  models.rs  prompt_config.rs  prompts.rs  security.rs  summarize.rs  traits.rs  types.rs
src-tauri/src/llm/providers/: openai.rs
src-tauri/src/models/: dump.rs  errors.rs  feedback.rs  mod.rs  paths.rs  settings.rs  weekly.rs
src-tauri/src/platform/: mod.rs  shortcuts.rs  tray.rs  window_manager.rs
src-tauri/src/services/: ai_service.rs  feedback_service.rs  history_service.rs  mod.rs  storage_service.rs  weekly_service.rs
src-tauri/src/services/llm/: commands.rs  download.rs  engine.rs  models.rs  prompt_config.rs  prompts.rs  security.rs  summarize.rs
src-tauri/src/services/llm/providers/: mod.rs  openai.rs
src-tauri/src/utils/: datetime.rs  link_preview.rs  mod.rs
(+196 files in other folders)
