[package]
name = "hoego"
version = "0.3.0"
edition = "2021"
description = "Ambient time tracker overlay built with Tauri"
authors = ["Tony"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros", "parsing", "formatting", "local-offset"] }
tauri = { version = "1", features = [ "window-all", "path-all", "global-shortcut-all", "macos-private-api", "shell-open", "system-tray", "global-shortcut", "fs-all", "process-all"] }
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc = "0.2"
core-graphics = "0.23"
tokio = { version = "1", features = ["full"] }
async-channel = "2"
reqwest = { version = "0.11", features = ["stream", "json", "blocking"] }
futures = "0.3"
sha2 = "0.10"
tempfile = "3"
hex = "0.4"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
specta = { version = "1.0.5", features = ["serde"] }
# LLM support - using process-based llama-server for now
# llama-cpp-2 = { version = "0.1", features = ["metal"] }  # Disabled due to macOS compatibility issues

# Cloud LLM support
async-trait = "0.1"
keyring = "2"
thiserror = "1"
ratatui = "0.28"
crossterm = "0.28"
unicode-width = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
llm-smoke = []

[[example]]
name = "llm_smoke"
path = "examples/llm_smoke.rs"
required-features = ["llm-smoke"]

[[bin]]
name = "hoego-cli"
path = "src/bin/hoego_cli.rs"

[[bin]]
name = "hoego"
path = "src/bin/hoego.rs"
